ags (0.6.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* work-around in ags_notation_remove_note_at_position() to fix memory corruption

ags (0.6.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed NULL pointer during key editing in editor
	* fixed race conditions in pattern and note edit
	* fixed missing reset link in ags_notation_add_note()
	* fixed access to invalidated pointer in ags_notation_remove_note_at_position()

ags (0.6.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_thread_find_type() and ::run of all thread implementations to be safer
	* fixed dead-lock while pasting notes that caused application to crash

ags (0.6.24)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed dead-lock while open XML files
	* fixed misconfigured port

ags (0.6.23)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed REVERSE_TAB to escape focus of AgsDial by forward control keys
	* fixed _File mnemonic in menubar

ags (0.6.22)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed relative path to gsequencer while applying properties

ags (0.6.21)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed restoring and allocation of AgsLineMember dimensions
	* fixed SIGINT while reading XML files including AgsRecallLadspa

ags (0.6.20)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unrolled functions to have correct stop
	* fixed selection in ags_pattern_edit_callbacks.c and ags_note_edit_callbacks.c because it used wrong context
	* fixed ags_recall_real_cancel() because children field might have changed

ags (0.6.19)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed accessing NULL pointer in ags_synth.c
	* fixed accessing NULL pointer in ags_ipatch.c
	* fixed accessing NULL pointer in ags_ffplayer_callbacks.c
	* fixed missing lock of mutex in ags_playable.c

ags (0.6.18)
